fixing projects and footer for minimal contrast style

--- a/src/style/contrast.less
+++ b/src/style/contrast.less
@@ -1,25 +1,60 @@
-
-body {
-  font-family: monospace, monospace;
-  font-size: 16px; 
+html {
+  font-family: serif;
+  font-size: 2vw;
+  @media (max-width: 480px) {
+    font-size: 5vw;
+  }
+  * {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    margin: 0;
+    padding: 0;
+  }
 }
 
-*{
-  font-size: 1rem; 
-  line-height: 1.5rem;
-  margin: 0;
-  padding: 0;
-  background-image: none!important;
-}
-
-.colofon, video, img, svg, .project-category {
+.colofon, video, img, svg, .project-category, [aria-hidden='true'] {
   display: none;
 }
 
-p, h1, h2, h3, h4, h5, h6, nav, time {
+p, h1, h2, h3, h4, h5, h6, nav, time, footer {
   margin-bottom: 1.5rem;
 }
 
-main, h1, nav {
+main, header h1, nav, footer {
   padding-left: 0.5rem;
+}
+
+.projects {
+  li {
+    display: inline-block;
+    width: 316px;
+    height: calc(165px + 1.5rem);
+    background-repeat: no-repeat;
+    background-position: 0 1.5rem;
+    vertical-align: top;
+  }
+  a {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+  }
+}
+
+code {
+  font-family: monospace, monospace;
+}
+
+.prevnext {
+  padding: 0.5rem 0 0;
+}
+
+.prev:before {
+  content: 'previous: ';
+}
+
+.next {
+  display: block;
+  &:before {
+    content: 'next: ';
+  }
 }
